--- a/ontologia_dla_kazdego/ontologia_wprowadzenie.ipynb
+++ b/ontologia_dla_kazdego/ontologia_wprowadzenie.ipynb
@@ -40,7 +40,10 @@
         "\n",
         "<img src='https://github.com/trypuz/ai_dla_kazdego/blob/main/pliki_yEd/trojki.png?raw=1'>\n",
         "\n",
-        "W RDF mówi się, że wszystko jest zasobem (ang. *resource*). Ja jestem zasobem, Twoje życie jest zasobem, dokument tekstowy na dysku jest zasoben, etc. Wszystko. Aby móc skonstruować trójkę, która mówi coś o jakimś zasobie, zasób ten musi mieć swój indetyfikator. Dokładnie rzecz ujmując, identyfikator ten mus być adresem URI. URI to skrót od *Uniform Resource Identifier* (ujednolicony identyfikator zasobu). Najczęściej URI jest URL (skrót od *Uniform Resource Locator*), czyli wygląda jak adres strony www: `https://domenta/ścieżka_do_zasobu`.\n",
+        "W RDF mówi się, że wszystko jest zasobem (ang. *resource*). Ja jestem zasobem, Twoje życie jest zasobem, dokument tekstowy na dysku jest zasoben, etc. Wszystko. Zasoby do których odnosimy się w trójkach RDF nie muszą być faktycznie ,,czymś'' zapisanym na dysku komputera. URI zasobów nie muszą wskazywać plików – mogą reprezentować dowolne obiekty/byty obecne w świecie rzeczywistym. Również to co utworzymy za pomocą języka RDF jest zasobem!\n",
+        "\n",
+        "\n",
+        "Aby móc skonstruować trójkę, która mówi coś o jakimś zasobie, zasób ten musi mieć swój indetyfikator. Dokładnie rzecz ujmując, identyfikator ten mus być adresem URI. URI to skrót od *Uniform Resource Identifier* (ujednolicony identyfikator zasobu). Najczęściej URI jest URL (skrót od *Uniform Resource Locator*), czyli wygląda jak adres strony www: `https://domenta/ścieżka_do_zasobu`. Możesz też usłyszeć, że identyfikatorami zasobów RDF są typu IRI (skrót od ang. *Internationalized Resource Identifier*). IRI to takie URI, w którym mogą pojawić się znaki spoza alfabetu angielskiego, np. znaki specyficzne dla języka polskiego.  \n",
         "\n",
         "W RDF, jeśli chcemy powiedzieć, że Jan lubi Anię lub chcemy wyrazić fakt, że Jan ma 186cm wzrostu, to musimy najpierw stworzyć identyfiaktory dla Jana, Ani oraz predykatów lubi i ma wzrost.\n",
         "\n",
@@ -56,14 +59,13 @@
         "\n",
         "<img src='https://github.com/trypuz/ai_dla_kazdego/blob/main/pliki_yEd/trojki_przyklad_uri.png?raw=1'>\n",
         "\n",
-        "Rola powiązań RDF wybiega daleko poza koncepcję/mechanizm odnośników na stronach WWW.\n",
-        "Powiązania w RDF są „etykietowane”.\n",
-        "Powiązania RDF mogą łączyć te same zasoby na różne sposoby, np. oddające różne punkty widzenia. Nie istnieją natomiast zasadniczo różne rodzaje hiperłączy.\n",
-        "Powiązanie RDF nie są też przewidziane do bezpośredniego wykorzystania jak hierłącza.\n",
+        "URI zasobów RDF nie są też przewidziane do bezpośredniego wykorzystania jak hierłącza (tj. linki na stronach www).\n",
+        "\n",
+        "\n",
+        "\n",
         "Hiperłącza może zamieszczać na stronie WWW jedynie osoba zarządzająca stroną. Powiązania RDF może tworzyć każdy.\n",
         "Zasoby to nie tylko strony WWW! Za pomocą RDF można opisywać np. pliki mp3 czy zdjęcia.\n",
-        "Najważniejsze: zasoby do których odnosimy się w trójkach RDF nie muszą być faktycznie „czymś” zapisanym na dysku jakiegoś komputera. URI zasobów nie muszą wskazywać plików – mogą reprezentować dowolne obiekty/byty obecne w świecie rzeczywistym.\n",
-        "To co utworzymy za pomocą języka RDF, również jest zasobem internetowym.\n",
+        "Najważniejsze: \n",
         "\n",
         "\n",
         "Znaczenie danego URI zależy od właściciela domeny (jego pożądane interpretacja jest umowna).\n",
@@ -73,7 +75,7 @@
         "Odnośnik URI zasobu składa się z bazy, po którym następuje znak „/” lub „#”, a następnie identyfikator danego fragmentu (np. `http://ai.kul.pl/Ania`).\n",
         "W odnośniki URI rozróżniane są małe i duże litery!\n",
         "\n",
-        "Każdy zasób musi posiadać identyfikator IRI (Internationalized Resource Identifier). W IRI mogą pojawić się znaki z Uniwersalnego Zestawu Znaków (UCS – Universal Character Set) określonego przez normę ISO/IEC 10646. IRI jest uogólnieniem URI (tylko znaki ASCII). URL jest ważnym przykładem URI.   \n",
+        " \n",
         "\n",
         "\n",
         "\n",
