--- a/ontologia_dla_kazdego/ontologia_wprowadzenie.ipynb
+++ b/ontologia_dla_kazdego/ontologia_wprowadzenie.ipynb
@@ -26,7 +26,7 @@
         "Pierwsza wersja standardu RDF została wydana przez W3C w 1997 roku (nota bene, razem z pierwszą specyfikacją języka XML).Standard RDF jest jednym z filarów semantycznego internetu (ang. *Semantic Web*).\n",
         "\n",
         "\n",
-        "### Trójki i identyfikatory URI\n",
+        "### Trójki\n",
         "\n",
         "Podstawowym założeniem, a nawet ograniczeniem, staradrdu RDF jest sposób zapisu informacji. Mianowicie, każde stwierdzenie musi składać się z trzech elementów: podmiotu, orzeczenia i dopełnienia, np. \n",
         "- `Ala` (podmiot) `ma` (orzeczenie) `kota` (dopełnienie).\n",
@@ -42,12 +42,18 @@
         "\n",
         "W RDF mówi się, że wszystko jest zasobem (ang. *resource*). Ja jestem zasobem, Twoje życie jest zasobem, dokument tekstowy na dysku jest zasoben, etc. Wszystko. Zasoby do których odnosimy się w trójkach RDF nie muszą być faktycznie ,,czymś'' zapisanym na dysku komputera. URI zasobów nie muszą wskazywać plików – mogą reprezentować dowolne obiekty/byty obecne w świecie rzeczywistym. Również to co utworzymy za pomocą języka RDF jest zasobem!\n",
         "\n",
+        "### Identyfikatory URI\n",
         "\n",
         "Aby móc skonstruować trójkę, która mówi coś o jakimś zasobie, zasób ten musi mieć swój indetyfikator. Dokładnie rzecz ujmując, identyfikator ten mus być adresem URI. URI to skrót od *Uniform Resource Identifier* (ujednolicony identyfikator zasobu). Najczęściej URI jest URL (skrót od *Uniform Resource Locator*), czyli wygląda jak adres strony www: `https://domenta/ścieżka_do_zasobu`. Możesz też usłyszeć, że identyfikatorami zasobów RDF są typu IRI (skrót od ang. *Internationalized Resource Identifier*). IRI to takie URI, w którym mogą pojawić się znaki spoza alfabetu angielskiego, np. znaki specyficzne dla języka polskiego.  \n",
+        "\n",
+        "Graf RDF = zbiór trójek RDF\n",
         "\n",
         "W RDF, jeśli chcemy powiedzieć, że Jan lubi Anię lub chcemy wyrazić fakt, że Jan ma 186cm wzrostu, to musimy najpierw stworzyć identyfiaktory dla Jana, Ani oraz predykatów lubi i ma wzrost.\n",
         "\n",
         "<img src='https://github.com/trypuz/ai_dla_kazdego/blob/main/pliki_yEd/trojki_przyklad.png?raw=1'>\n",
+        "\n",
+        "Pierwszym krokiem tworzenia grafu RDF dla pewnej dziedziny jest przydzielenie pewnego wydzielonego adresu (np. `http://ai.kul.pl/vocab`) jako bazy słownika nazw zasobów.\n",
+        "Odnośnik URI zasobu składa się z bazy, po którym następuje znak „/” lub „#” - my będziemy preferować pierwszą opcję - a następnie identyfikator danego fragmentu (np. `http://ai.kul.pl/Jan`). Pamiętaj, że w identyfikatorach URI rozróżniane są małe i duże litery!\n",
         "\n",
         "Identyfikatory URI dla zasobów z powyższego przykładu mogłyby wyglądać ta:\n",
         "\n",
@@ -61,43 +67,12 @@
         "\n",
         "URI zasobów RDF nie są też przewidziane do bezpośredniego wykorzystania jak hierłącza (tj. linki na stronach www).\n",
         "\n",
-        "\n",
-        "\n",
-        "Hiperłącza może zamieszczać na stronie WWW jedynie osoba zarządzająca stroną. Powiązania RDF może tworzyć każdy.\n",
-        "Zasoby to nie tylko strony WWW! Za pomocą RDF można opisywać np. pliki mp3 czy zdjęcia.\n",
-        "Najważniejsze: \n",
-        "\n",
-        "\n",
         "Znaczenie danego URI zależy od właściciela domeny (jego pożądane interpretacja jest umowna).\n",
-        "RDF oferuje jednolity, rekursywny, elastyczny i potężny w swojej prostocie model danych \n",
-        "przystosowany do zapisu różnego rodzaju informacji\n",
-        "Pierwszym krokiem tworzenia grafu RDF dla pewnej dziedziny jest przydzielenie pewnego wydzielonego adresu (np. `http://ai.kul.pl/vocab`) jako identyfikatora/bazy słownika nazw zasobów.\n",
-        "Odnośnik URI zasobu składa się z bazy, po którym następuje znak „/” lub „#”, a następnie identyfikator danego fragmentu (np. `http://ai.kul.pl/Ania`).\n",
-        "W odnośniki URI rozróżniane są małe i duże litery!\n",
-        "\n",
-        " \n",
         "\n",
         "\n",
+        "### Węzły anonimowe\n",
         "\n",
-        "\n",
-        "\n",
-        "Podmiot:\n",
-        "\n",
-        "- Odnośnik URI\n",
-        "- Węzeł anonimowy\n",
-        "\n",
-        "Orzecznik:\n",
-        "\n",
-        "- Odnośnik URI\n",
-        "\n",
-        "Dopełnienie:\n",
-        "\n",
-        "- Odnośnik URI\n",
-        "- Węzeł anonimowy\n",
-        "- Literał\n",
-        "\n",
-        "\n",
-        "Graf RDF = zbiór trójek RDF\n"
+        "podmiot i obiekt"
       ]
     },
     {
