--- a/data_science_dla_kazdego/numpy.ipynb
+++ b/data_science_dla_kazdego/numpy.ipynb
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 1,
       "metadata": {
         "id": "83mOK3ceaDmB"
       },
@@ -982,7 +982,7 @@
         "id": "o6-xv9_-KcOD",
         "outputId": "48a2c9e6-b06f-4071-c2e4-f96047fc9c92"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1007,7 +1007,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1835,7 +1835,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1870,7 +1870,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1906,7 +1906,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2627,7 +2627,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2676,7 +2676,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2724,7 +2724,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2967,7 +2967,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "atomic-polyester",
         "outputId": "c24f2881-dede-4f2b-e59e-3bc91d4ad36d",
@@ -3029,7 +3029,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "id": "aerial-bermuda",
         "outputId": "651a836a-a50a-47fe-ea7d-c76e52e3faa0",
@@ -3064,7 +3064,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "elder-fishing",
         "outputId": "a3b3b0e3-25e9-4773-882f-f11917937510",
@@ -3112,7 +3112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "id": "tracked-essay",
         "outputId": "9e8609ca-0a5c-427b-84d2-d0a1429bac37",
@@ -3187,7 +3187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "id": "solar-investor",
         "outputId": "06cb1841-dec7-4941-a45a-a643f384a4dc",
@@ -3228,7 +3228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "id": "seventh-swiss",
         "outputId": "a05681c5-35de-4cb5-fc1a-fe2b0bd242c5",
@@ -3281,7 +3281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3310,7 +3310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3336,7 +3336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3464,8 +3464,30 @@
         "id": "dXgAuosRsgpV"
       },
       "source": [
-        "### ..."
+        "## Wprawki"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Wprawka 1\n",
+        "\n",
+        "Napisz kod, który zamieni macierz \n",
+        "```\n",
+        "array([[1., 0.],\n",
+        "       [0., 1.]])\n",
+        "```\n",
+        "na\n",
+        "```\n",
+        "array([[1., 1., 0., 0.],\n",
+        "       [1., 1., 0., 0.],\n",
+        "       [0., 0., 1., 1.],\n",
+        "       [0., 0., 1., 1.]])\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "qM25J2fY_F8u"
+      }
     }
   ],
   "metadata": {
