--- a/ontologia_dla_kazdego/ontologia_wprowadzenie.ipynb
+++ b/ontologia_dla_kazdego/ontologia_wprowadzenie.ipynb
@@ -173,16 +173,26 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "ead1ac54",
-      "metadata": {
-        "id": "ead1ac54"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        ""
-      ]
+        "Graf RDF jest strukturą abstrakcyjną, składa się z wierzchołków i krawędzi. Połączenie dwóch wierzchołków grafu tworzy trójkę. I jak powiedzieliśmy wcześniej, graf RDF można traktować jako zbriór trójek. Jeśli chcemy zapisać taki graf w pliku na dysku, to musimy dokładnie zdefiniować sposób reprezentacji trójek. Ściśle zdefiniowany sposób zapisu grafu RDF do pliku nazywamy jego serializacją. \n",
+        "\n",
+        "<img src='https://github.com/trypuz/ai_dla_kazdego/blob/main/pliki_yEd/serializacja.png?raw=1'>"
+      ],
+      "metadata": {
+        "id": "VLDC4yyfIJci"
+      },
+      "id": "VLDC4yyfIJci"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " RDF/XML, N3, NTriples, N-Quads, Turtle, TriX, RDFa, Microdata i JSON-LD"
+      ],
+      "metadata": {
+        "id": "Soov3jRBH6Ju"
+      },
+      "id": "Soov3jRBH6Ju"
     }
   ],
   "metadata": {
