--- a/python_dla_kazdego/python_podstawy.ipynb
+++ b/python_dla_kazdego/python_podstawy.ipynb
@@ -8321,6 +8321,46 @@
         "for i in my_generator:\n",
         "    print(i)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Itertools\n",
+        "\n",
+        "Wbudowane iteratory\n",
+        "\n",
+        "`islice` - iterator przydatny do dzielenia obiektów iterowalnych, których nie da się inaczej podzielić (np. zbiory)"
+      ],
+      "metadata": {
+        "id": "JeSjHARzYN4_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from itertools import islice\n",
+        "for e in islice({1,2,3,4,5}, 3):\n",
+        "  print(e)"
+      ],
+      "metadata": {
+        "id": "s1pdlPysXaYi",
+        "outputId": "2546fcb5-688c-4f8a-888a-a20e7a3d337c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
