--- a/ontologia_dla_kazdego/rdflib.ipynb
+++ b/ontologia_dla_kazdego/rdflib.ipynb
@@ -2555,7 +2555,7 @@
         "id": "vOClrf-5Hwbi"
       },
       "source": [
-        "## Ćwiczenia"
+        "## Wprawki"
       ]
     },
     {
@@ -2564,7 +2564,7 @@
         "id": "JfCF7aGJHwbi"
       },
       "source": [
-        "### ĆWICZENIE 1 - Polscy Poeci\n",
+        "### Wprawka - Polscy Poeci\n",
         "\n",
         "Użyj kwerendy SPARQLowej, aby wydobyć z DBpedii następujące informacje o polskich poeatach:\n",
         "- nazwa (imię i nazwisko)\n",
@@ -2819,7 +2819,7 @@
         "id": "-sKdP5zdHwbj"
       },
       "source": [
-        "### ĆWICZENIE 2 -  Scarlett Johansson i problem najmniejszej miejscowości\n",
+        "### Wprawka -  Scarlett Johansson i problem najmniejszej miejscowości\n",
         "\n",
         "https://imdbpy.readthedocs.io/en/latest/"
       ]
@@ -2997,7 +2997,7 @@
         "id": "PadcVSD0Hwbj"
       },
       "source": [
-        "### ĆWICZENIE 3 - Testy higieniczne, czyli czego brakuje mojej ontologii\n",
+        "### Wprawka - Testy higieniczne, czyli czego brakuje mojej ontologii\n",
         "\n",
         "- Załaduj ontologię https://spec.edmcouncil.org/auto/ontology/master/latest/AboutAUTODev.rdf\n",
         "- Stwórz listę wszystkich odnośników (URL) importowanych w powyższej ontologii (skorzystaj z `owl:imports`)\n",
@@ -3100,7 +3100,7 @@
         "id": "4PlbDcvlHwbk"
       },
       "source": [
-        "### ĆWICZENIE 4 - Poczet Królów Polskich"
+        "### Wprawka - Poczet Królów Polskich"
       ]
     },
     {
