notatki do Turtle

--- a/ontologia_dla_kazdego/ontologia_wprowadzenie.ipynb
+++ b/ontologia_dla_kazdego/ontologia_wprowadzenie.ipynb
@@ -193,6 +193,31 @@
         "id": "Soov3jRBH6Ju"
       },
       "id": "Soov3jRBH6Ju"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Turtle\n",
+        "https://www.w3.org/TR/2014/REC-turtle-20140225/\n",
+        "\n",
+        "\n",
+        "`<http://ai.kul.pl/vocab/Jan> <http://ai.kul.pl/vocab/lubi> <http://ai.kul.pl/vocab/Ania> .`\n",
+        "\n",
+        "`@prefix`\n",
+        "\n",
+        "`http://www.w3.org/1999/02/22-rdf-syntax-ns#`\n",
+        "\n",
+        "`@base`\n",
+        "\n",
+        "`rdf:type` `a`\n",
+        "\n",
+        "`rdf:Property`a\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "C2gNaYMhOaTb"
+      },
+      "id": "C2gNaYMhOaTb"
     }
   ],
   "metadata": {
