reorganizacja i drobne zmiany w data science i wprowadzeniu do ML

--- a/data_science/data_science_intro.ipynb
+++ b/data_science/data_science_intro.ipynb
@@ -88,9 +88,9 @@
     "\n",
     "Data science ma zupełnie inne podejście. Celem analizy nie jest stworzenie modelu predykcyjnego, ale znalezienie wiedzy \"ukrytej\" w danych, na przykład zauważenie, że dwie działki budowlane o podobnych wymiarach mogą się diametralnie różnic ceną gdy pierwsza jest zlokalizowana w A, a druga w dzielnicy B, albo, że działki ogrodzone są o 10% proższe od tych nieogodzonych (oczywiście porównujemy działki o podobnych cechach). Znalezienie takich zależności może przyczynić się do pojęcia decyzji, np. sprzedający może zdecydować się na ogodzenie sprzedawanej przez siebie działki (o ile kosz budowy takiego ogrodzenia będzie niższy niż dziesięcioprocentowy wzrost ceny tej działki). Wynikiem analiz w obszarze data scienice nie jest software, ale spisany zbirór obserwacji, często zbogacony digramami różnego typu.\n",
     "\n",
+    "Metody *data science* zalicza się przynajmniej w części do sztucznej inteligencji. \n",
     "\n",
-    "\n",
-    "W sensie ścisłym *data science* nie zalicza się do sztucznej inteligencji. \n",
+    "<img src=\"../pliki_yEd/ai_ds.png\" style=\"height:300px;\">\n",
     "\n",
     "Postanowiliśmy jednak dodać rozdział poświęcony analizie danych w Pythonie, gdyż opisane w kolejnych rozdziałach narzędzia z zakresu sztucznej inteligencji korzystają z opisanych w tym rozdziale technik i bibliotek. W związku z tym, postanowiliśmy większy nacisk położyć na stronę praktyczną, a w mniejszym stopniu zajmować się podstawami teoretycznymi czy też technicznymi tych zagadnień."
    ]
