--- a/uczenie_maszynowe/wprowadzenie_do_uczenia_maszynowego.ipynb
+++ b/uczenie_maszynowe/wprowadzenie_do_uczenia_maszynowego.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "86fd287a",
+   "id": "652ecdd4",
    "metadata": {},
    "source": [
     "# Wprowadzenie do uczenia maszynowego"
@@ -10,7 +10,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36197d35",
+   "id": "bfe28600",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68db9325",
    "metadata": {},
    "source": [
     "## Uczenie nadzorowane & nienadzorowane"
@@ -18,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ed673dc",
+   "id": "b49ba23f",
    "metadata": {},
    "source": [
     "W uczeniu nadzorowanym (aka uczeniu z nauczycielem) mamy wejście X, które jest wektorem cech opisujących dany obiekt, oraz wyjście y. Wyjście może być różnie zdefiniowane.\n",
@@ -37,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f02126f",
+   "id": "ae97e7af",
    "metadata": {},
    "source": [
     "## Dane strukturalne i niestrukturalne"
@@ -45,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be605c3b",
+   "id": "40b94154",
    "metadata": {},
    "source": [
     "Dane strukturalne to w zasadzie dane tabelaryczne, czyli bazy danych, arkusze kalkulacyjne, itp.\n",
@@ -55,17 +61,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45f6dcf3",
+   "id": "9e628d5b",
    "metadata": {},
    "source": [
     "## Uczenie maszynowe płytkie i głębokie\n",
     "\n",
-    "Głębokie ucznie maszynowe opiera się na sztucznych sieciach neuronowych (ang. *Artificial Neural Network*). Dziś w zasadzie zamiennie używa się terminów głęboka sieć neuronowa i sieć neuronowa."
+    "Sztuczna inteligencja to narzędzia i algorytmy, które automatyzują procesy myślowe wykonywane przez ludzi. \n",
+    "\n",
+    "Uczenie maszynowe...\n",
+    "\n",
+    "Płytkie uczenie maszynowe... [Introduction to Shallow Machine Learning](https://www.linkedin.com/pulse/introduction-shallow-machine-learning-ayman-mahmoud/)\n",
+    "\n",
+    "Głębokie ucznie maszynowe opiera się na sztucznych sieciach neuronowych (ang. *Artificial Neural Network*). Dziś w zasadzie zamiennie używa się terminów głęboka sieć neuronowa i sieć neuronowa.\n",
+    "\n",
+    "<img src=\"../pliki_yEd/ai_ml_dl.png\" style=\"height:300px;\">"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2797df29",
+   "id": "250fa96f",
    "metadata": {},
    "source": [
     "## Powody szerokich zastosowań uczenia głębokiego od drugiej dekady XXI"
@@ -73,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5a74927",
+   "id": "07a7766d",
    "metadata": {},
    "source": [
     "### Dane"
@@ -81,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db6480df",
+   "id": "c28caf7f",
    "metadata": {},
    "source": [
     "### Sprzęt"
@@ -89,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7be37da",
+   "id": "a8fb0c02",
    "metadata": {},
    "source": [
     "### Algorytmy i efekt skali\n",
@@ -99,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4bcbb50",
+   "id": "594540d1",
    "metadata": {},
    "source": [
     "### Ogromne inwestycje gigantów IT"
@@ -107,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d0df5df",
+   "id": "2f876a8f",
    "metadata": {},
    "source": [
     "### Otwarte narzędzia"
@@ -115,18 +129,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82efa464",
+   "id": "6674aa80",
    "metadata": {},
    "source": [
     "## Bibliografia\n",
-    "- DeepLearning.ai\n",
+    "- [DeepLearning.ai](https://www.deeplearning.ai/courses/)\n",
+    "- [Introduction to Shallow Machine Learning](https://www.linkedin.com/pulse/introduction-shallow-machine-learning-ayman-mahmoud/)\n",
     "- Francois Chollet, Deep Learning with Python (first and second editions)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fab566c1",
+   "id": "0ca0cb2d",
    "metadata": {},
    "outputs": [],
    "source": []
